recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: not found: value avandce
 	avandce(0)
        ^